@@ -85,6 +85,8 @@ extern bool set_warn_surpressions;
 extern bool set_files_by_thread;
 extern bool set_href_detection;
 extern bool set_mbox_shortened;
+extern bool set_report_new_file;
+extern bool set_report_new_folder;
 
 extern int set_showhtml;
 extern int set_thrdlevels;
